Closed Bug 515159 Opened 16 years ago Closed 16 years ago

Crash [@nsSpamSettings::Initialize(nsIMsgIncomingServer*) ] shortly after start of MailNews

Categories

(MailNews Core :: Filters, defect)

x86
Windows XP
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
Thunderbird 3.0b4

People

(Reporter: opitz.michael, Assigned: rkent)

References

Details

(Whiteboard: [no l10n impact])

Attachments

(1 file)

SeaMonkey crashes shortly after open MailNews. Crash-IDs: 8c77bb5b-418d-4bc8-8482-878772090908 78259045-1c30-46d6-87de-55fd12090907 Configuration of MailNews: 5 IMAP-Accounts (all with Junk-Mail filter active) 3 of the IMAP-Accounts have check every 60 minutes the rest check every 10 minutes, no check on startup 1 POP-Account (w/o global inbox, junk-filter active) 1 News-Account Crash happens with BuildID 20090906 and BuildID 20090907 2.0B2 Candidates Build1 does not crash In this timeframe, i only found Bug 512416 which changed nsSpamSettings.cpp
I'm not handling the case of a null account returned, thinking that the rv was enough. I'll do a patch for that. Thanks for the report.
Blocks: 512416
Status: UNCONFIRMED → ASSIGNED
Component: MailNews: Backend → Filters
Ever confirmed: true
Product: SeaMonkey → MailNews Core
QA Contact: mailnews-backend → filters
Target Milestone: --- → Thunderbird 3.0b4
Attachment #399234 - Flags: superreview?(bienvenu)
Attachment #399234 - Flags: review?(bienvenu)
Assignee: nobody → kent
Flags: blocking-thunderbird3?
Flags: blocking-thunderbird3? → blocking-thunderbird3+
Comment on attachment 399234 [details] [diff] [review] check for null account looks reasonable; let's try this.
Attachment #399234 - Flags: superreview?(bienvenu)
Attachment #399234 - Flags: superreview+
Attachment #399234 - Flags: review?(bienvenu)
Attachment #399234 - Flags: review+
Whiteboard: [no l10n impact]
Keywords: checkin-needed
Whiteboard: [no l10n impact] → [no l10n impact] [needs checkin]
Summary: Crash [@nsSpamSettings::Initialize(nsIMsgIncomingServer*) ] shortly afer start of MailNews → Crash [@nsSpamSettings::Initialize(nsIMsgIncomingServer*) ] shortly after start of MailNews
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [no l10n impact] [needs checkin] → [no l10n impact]
With todays nightly crash is gone. Verified fixed
Status: RESOLVED → VERIFIED
Depends on: 629649
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: