Bug 515159 - "Crash [@nsSpamSettings::Initialize(nsIMsgIncomingServer*) ] shortly after start of MailNews" [r+sr=bienvenu a=blocking-thunderbird3]